Libs, tests and README updates  - gulp migration  - bower to npm migration  - phantomJS to chromeHeadless migration  - 1 test migration

--- a/README.adoc
+++ b/README.adoc
@@ -52,103 +52,58 @@ tveronezi@ubatuba:tomitribe.io$ mvn frontend:gulp
 [INFO]
 [INFO] --- frontend-maven-plugin:0.0.26:gulp (default-cli) @ tomitribe-io-www ---
 [INFO] Running 'gulp.js --no-color' in /home/tveronezi/Documents/development/sources/tribe/ui/tomitribe.io/src/main/static
-[INFO] [10:49:45] Using gulpfile ~/Documents/development/sources/tribe/ui/tomitribe.io/src/main/static/gulpfile.js
-[INFO] [10:49:45] Starting 'sync group6:0'...
-[INFO] [10:49:45] Starting 'sync group5:0'...
-[INFO] [10:49:45] Starting 'clean'...
-[INFO] [10:49:45] Finished 'clean' after 38 ms
-[INFO] [10:49:45] Finished 'sync group5:0' after 39 ms
-[INFO] [10:49:45] Starting 'sync group5:1'...
-[INFO] [10:49:45] Starting 'bower'...
-[INFO] [10:49:45] Using cwd:  /home/tveronezi/Documents/development/sources/tribe/ui/tomitribe.io/src/main/static
-[INFO] [10:49:45] Using bower dir:  ./bower_components
-[INFO] [10:49:47] Finished 'bower' after 2.24 s
-[INFO] [10:49:47] Finished 'sync group5:1' after 2.24 s
-[INFO] [10:49:47] Starting 'sync group5:2'...
-[INFO] [10:49:47] Starting 'jade'...
-[INFO] [10:49:47] Finished 'jade' after 447 ms
-[INFO] [10:49:47] Finished 'sync group5:2' after 448 ms
-[INFO] [10:49:47] Starting 'sync group5:3'...
-[INFO] [10:49:47] Starting 'sync group2:0'...
-[INFO] [10:49:47] Starting 'copy-images'...
-[INFO] [10:49:47] Finished 'copy-images' after 44 ms
-[INFO] [10:49:47] Finished 'sync group2:0' after 44 ms
-[INFO] [10:49:47] Starting 'sync group2:1'...
-[INFO] [10:49:47] Starting 'sprites'...
-[INFO] [10:49:48] Finished 'sprites' after 227 ms
-[INFO] [10:49:48] Finished 'sync group2:1' after 229 ms
-[INFO] [10:49:48] Starting 'images'...
-[INFO] [10:49:48] Finished 'images' after 14 μs
-[INFO] [10:49:48] Finished 'sync group5:3' after 277 ms
-[INFO] [10:49:48] Starting 'sync group5:4'...
-[INFO] [10:49:48] Starting 'sync group0:0'...
-[INFO] [10:49:48] Starting 'sync group1:0'...
-[INFO] [10:49:48] Starting 'sass'...
-[INFO] [10:49:48] Finished 'sass' after 88 ms
-[INFO] [10:49:48] Finished 'sync group1:0' after 89 ms
-[INFO] [10:49:48] Starting 'sync group1:1'...
-[INFO] [10:49:48] Starting 'autoprefixer'...
-[INFO] [10:49:48] Finished 'autoprefixer' after 146 ms
-[INFO] [10:49:48] Finished 'sync group1:1' after 146 ms
-[INFO] [10:49:48] Starting 'sync group1:2'...
-[INFO] [10:49:48] Starting 'css-concat'...
-[INFO] [10:49:48] Finished 'css-concat' after 13 ms
-[INFO] [10:49:48] Finished 'sync group1:2' after 13 ms
-[INFO] [10:49:48] Starting 'css-build'...
-[INFO] [10:49:48] Finished 'css-build' after 3.52 μs
-[INFO] [10:49:48] Finished 'sync group0:0' after 249 ms
-[INFO] [10:49:48] Starting 'sync group0:1'...
-[INFO] [10:49:48] Starting 'css-third-party'...
-[INFO] [10:49:48] Finished 'css-third-party' after 23 ms
-[INFO] [10:49:48] Finished 'sync group0:1' after 23 ms
-[INFO] [10:49:48] Starting 'sync group0:2'...
-[INFO] [10:49:48] Starting 'css-third-party-resources'...
-[INFO] [10:49:48] Finished 'css-third-party-resources' after 12 ms
-[INFO] [10:49:48] Finished 'sync group0:2' after 16 ms
-[INFO] [10:49:48] Starting 'css'...
-[INFO] [10:49:48] Finished 'css' after 14 μs
-[INFO] [10:49:48] Finished 'sync group5:4' after 292 ms
-[INFO] [10:49:48] Starting 'sync group5:5'...
-[INFO] [10:49:48] Starting 'sync group3:0'...
-[INFO] [10:49:48] Starting 'sync group4:0'...
-[INFO] [10:49:48] Starting 'lint'...
-[INFO] [10:49:48]        assets/js/services-app.js
-[INFO] [10:49:48]        assets/js/app.js
-[INFO] [10:49:48]        assets/js/controllers-contributors.js
-[INFO] [10:49:48]        assets/js/controllers-project-details.js
-[INFO] [10:49:48]        assets/js/controllers-project-highlight.js
-[INFO] [10:49:48]        assets/js/controllers-projects-carousel.js
-[INFO] [10:49:48]        assets/js/controllers-projects.js
-[INFO] [10:49:48]        assets/js/controllers-twitter.js
-[INFO] [10:49:48] Finished 'lint' after 127 ms
-[INFO] [10:49:48] Finished 'sync group4:0' after 129 ms
-[INFO] [10:49:48] Starting 'sync group4:1'...
-[INFO] [10:49:48] Starting 'copy-js'...
-[INFO] [10:49:48] Finished 'copy-js' after 23 ms
-[INFO] [10:49:48] Finished 'sync group4:1' after 24 ms
-[INFO] [10:49:48] Starting 'sync group4:2'...
-[INFO] [10:49:48] Starting 'uglify'...
-[INFO] [10:49:48] Finished 'uglify' after 321 ms
-[INFO] [10:49:48] Finished 'sync group4:2' after 322 ms
-[INFO] [10:49:48] Starting 'js-build'...
-[INFO] [10:49:48] Finished 'js-build' after 6.04 μs
-[INFO] [10:49:48] Finished 'sync group3:0' after 481 ms
-[INFO] [10:49:48] Starting 'sync group3:1'...
-[INFO] [10:49:48] Starting 'js-third-party'...
-[INFO] [10:49:48] Finished 'js-third-party' after 8.4 ms
-[INFO] [10:49:48] Finished 'sync group3:1' after 9.05 ms
-[INFO] [10:49:48] Starting 'js'...
-[INFO] [10:49:48] Finished 'js' after 4.72 μs
-[INFO] [10:49:48] Finished 'sync group5:5' after 493 ms
-[INFO] [10:49:48] Starting 'build'...
-[INFO] [10:49:48] Finished 'build' after 6.61 μs
-[INFO] [10:49:48] Finished 'sync group6:0' after 3.79 s
-[INFO] [10:49:48] Starting 'sync group6:1'...
-[INFO] [10:49:48] Starting 'copy-to-target'...
-[INFO] [10:49:49] Finished 'copy-to-target' after 82 ms
-[INFO] [10:49:49] Finished 'sync group6:1' after 82 ms
-[INFO] [10:49:49] Starting 'default'...
-[INFO] [10:49:49] Finished 'default' after 43 ms
+[INFO] [18:13:18] Using gulpfile ~/Documents/development/sources/tribe/ui/tomitribe.io/src/main/static/gulpfile.js
+[INFO] [18:13:18] Starting 'build'...
+[INFO] [18:13:18] Starting 'clean'...
+[INFO] [18:13:18] Finished 'clean' after 97 ms
+[INFO] [18:13:18] Starting 'jade'...
+[INFO] [18:13:19] Finished 'jade' after 1.05 s
+[INFO] [18:13:19] Starting 'images'...
+[INFO] [18:13:19] Starting 'copy-images'...
+[INFO] [18:13:19] Finished 'copy-images' after 95 ms
+[INFO] [18:13:19] Starting 'sprites'...
+[INFO] [18:13:21] Finished 'sprites' after 1.29 s
+[INFO] [18:13:21] Finished 'images' after 1.38 s
+[INFO] [18:13:21] Starting 'css'...
+[INFO] [18:13:21] Starting 'css-build'...
+[INFO] [18:13:21] Starting 'sass'...
+[INFO] [18:13:22] Finished 'sass' after 1.62 s
+[INFO] [18:13:22] Starting 'autoprefixer'...
+[INFO] [18:13:24] Finished 'autoprefixer' after 1.35 s
+[INFO] [18:13:24] Starting 'css-concat'...
+[INFO] [18:13:24] Finished 'css-concat' after 28 ms
+[INFO] [18:13:24] Finished 'css-build' after 3 s
+[INFO] [18:13:24] Starting 'css-third-party'...
+[INFO] [18:13:24] Finished 'css-third-party' after 15 ms
+[INFO] [18:13:24] Starting 'css-third-party-resources'...
+[INFO] [18:13:24] Starting 'css-third-party-resources:font-awesome'...
+[INFO] [18:13:24] Finished 'css-third-party-resources:font-awesome' after 33 ms
+[INFO] [18:13:24] Starting 'css-third-party-resources:lato'...
+[INFO] [18:13:24] Finished 'css-third-party-resources:lato' after 347 ms
+[INFO] [18:13:24] Finished 'css-third-party-resources' after 383 ms
+[INFO] [18:13:24] Finished 'css' after 3.41 s
+[INFO] [18:13:24] Starting 'js'...
+[INFO] [18:13:24] Starting 'js-test'...
+[INFO] 23 07 2019 18:13:24.959:INFO [karma-server]: Karma v4.2.0 server started at http://0.0.0.0:9876/
+[INFO] 23 07 2019 18:13:24.961:INFO [launcher]: Launching browsers ChromeHeadless with concurrency unlimited
+[INFO] 23 07 2019 18:13:24.970:INFO [launcher]: Starting browser ChromeHeadless
+[INFO] 23 07 2019 18:13:26.246:INFO [HeadlessChrome 77.0.3844 (Windows 10.0.0)]: Connected on socket LLy36DqPTIXLMg1_AAAA with id 67828416
+[INFO] HeadlessChrome 77.0.3844 (Windows 10.0.0): Executed 4 of 4 SUCCESS (0.123 secs / 0.096 secs)
+[INFO] TOTAL: 4 SUCCESS
+[INFO] [18:13:27] Finished 'js-test' after 2.64 s
+[INFO] [18:13:27] Starting 'js-build'...
+[INFO] [18:13:27] Starting 'lint'...
+[INFO] [18:13:27] Finished 'lint' after 107 ms
+[INFO] [18:13:27] Starting 'copy-js'...
+[INFO] [18:13:27] Finished 'copy-js' after 43 ms
+[INFO] [18:13:27] Starting 'uglify'...
+[INFO] [18:13:27] Finished 'uglify' after 359 ms
+[INFO] [18:13:27] Finished 'js-build' after 515 ms
+[INFO] [18:13:27] Starting 'js-third-party'...
+[INFO] [18:13:27] Finished 'js-third-party' after 23 ms
+[INFO] [18:13:27] Finished 'js' after 3.18 s
+[INFO] [18:13:27] Finished 'build' after 9.13 s
+
 ----
 
 == Unit testing
@@ -169,14 +124,17 @@ tveronezi@ubatuba:tomitribe.io$ mvn frontend:karma
 [INFO]
 [INFO] --- frontend-maven-plugin:0.0.26:karma (default-cli) @ tomitribe-io-www ---
 [INFO] Running 'karma start karma.conf.js --no-colors' in /home/tveronezi/Documents/development/sources/tribe/ui/tomitribe.io/src/main/static
-[INFO] 08 10 2015 10:07:33.166:WARN [karma]: No captured browser, open http://localhost:9876/
-[INFO] 08 10 2015 10:07:33.177:INFO [karma]: Karma v0.13.10 server started at http://localhost:9876/
-[INFO] 08 10 2015 10:07:33.183:INFO [launcher]: Starting browser PhantomJS
-[INFO] 08 10 2015 10:07:33.421:INFO [PhantomJS 1.9.8 (Linux 0.0.0)]: Connected on socket 69XcpjL1trQ7xnP6AAAA with id 41615709
-       PhantomJS 1.9.8 (Linux 0.0.0): Executed 1 of 1 SUCCESS (0.039 secs / 0.009 secs)
+[INFO] 23 07 2019 18:10:02.722:WARN [karma]: No captured browser, open http://localhost:9876/
+[INFO] 23 07 2019 18:10:02.797:INFO [karma-server]: Karma v4.2.0 server started at http://0.0.0.0:9876/
+[INFO] 23 07 2019 18:10:02.798:INFO [launcher]: Launching browsers ChromeHeadless with concurrency unlimited
+[INFO] 23 07 2019 18:10:02.820:INFO [launcher]: Starting browser ChromeHeadless
+[INFO] 23 07 2019 18:10:04.336:INFO [HeadlessChrome 77.0.3844 (Linux 0.0.0)]: Connected on socket Y13EEBtxPBzseAcCAAAA with id 17629767
+[INFO] HeadlessChrome 77.0.3844 (Linux 0.0.0): Executed 4 of 4 SUCCESS (0.131 secs / 0.084 secs)
+[INFO] TOTAL: 4 SUCCESS
+
 ----
 
-The default browser is PhantonJS. In order to debug with the help of a real browser, uncomment this line in
+The default browser is ChromeHeadless. In order to debug with the help of a real browser, uncomment this line in
 link:https://github.com/tomitribe/tomitribe.io/blob/master/src/main/static/karma.conf.js[karma.conf.js]
 
 [source:javascript]
@@ -184,8 +142,8 @@ link:https://github.com/tomitribe/tomitribe.io/blob/master/src/main/static/karma
 // start these browsers
 // available browser launchers: https://npmjs.org/browse/keyword/karma-launcher
 browsers: [
-    // 'Chrome', // uncomment me for local unit testing [not in a headless server]
-    'PhantomJS'
+    //'Chrome', // uncomment me for local unit testing [not in a headless server]
+    'ChromeHeadless'
 ],
 ----
 
