feat: mock all rest parts currently used on pages

--- a/README.adoc
+++ b/README.adoc
@@ -6,153 +6,9 @@ It features the most relevant opensource projects and tools developed with the h
 
 == How to build and run the application locally?
 
-You will need a tomitribe github access token. You can use this value as a environment value (*github_atoken*) or
-a system property (*io.github.token*). If both are set, *io.github.token* will be used.
-
-If you don't have a token, ask link:https://tomitribe.slack.com/messages/@theresa[Theresa] for it.
-
-Once you have the token ready, simply run `mvn clean install tomee:run`. Your server will be available at
-http://localhost:8080/
-
-== Node.js and Gulp
-
-This application heavily depends on link:https://nodejs.org/[node.js] and link:http://gulpjs.com/[gulp] to build all the
-static resources. These tools will execute tons of actions not yet available in the java world; at least not as handy
-as available on node.js. The good news is that we don't need to worry about a thing. It will feel like any regular
-maven project. `mvn clean install tomee:run` will perform all the heavy lifting. It downloads the dependencies
-and executes node.js, gulp and the tomee server.
-
-== What about front-end development?
-
-Front-end developers don't need to restart servers. In fact, front-end developers don't like to waste a single second
-waiting for a JS change to be reflected on a web application. This is what make web development fun.
-
-Our application uses
-link:http://jade-lang.com/[Jade],
-link:http://sass-lang.com/[Sass],
-link:https://github.com/postcss/autoprefixer[Autoprefixer],
-link:https://github.com/sprity/sprity[Sprity],
-link:http://bower.io/[Bower],
-link:https://github.com/karimsa/gulp-jslint[JsLint],
-link:https://github.com/terinjokes/gulp-uglify[UglifyJs],
-link:https://github.com/floridoo/gulp-sourcemaps[SourceMaps]. Obviously, we have a lot of work to do before making a
-static change visible in the web site.
-
-In order to make it automatic, run `mvn frontend:gulp` in another terminal. It will trigger the default gulp task,
-which will watch for changes on *src/main/static/* and updates the running tomee instance accordingly as soon as a
-static change is detected.
-
-----
-tveronezi@ubatuba:tomitribe.io$ mvn frontend:gulp
-[INFO] Scanning for projects...
-[INFO]
-[INFO] ------------------------------------------------------------------------
-[INFO] Building Tomitribe :: IO :: Website 0.0.1-SNAPSHOT
-[INFO] ------------------------------------------------------------------------
-[INFO]
-[INFO] --- frontend-maven-plugin:0.0.26:gulp (default-cli) @ tomitribe-io-www ---
-[INFO] Running 'gulp.js --no-color' in /home/tveronezi/Documents/development/sources/tribe/ui/tomitribe.io/src/main/static
-[INFO] [18:13:18] Using gulpfile ~/Documents/development/sources/tribe/ui/tomitribe.io/src/main/static/gulpfile.js
-[INFO] [18:13:18] Starting 'build'...
-[INFO] [18:13:18] Starting 'clean'...
-[INFO] [18:13:18] Finished 'clean' after 97 ms
-[INFO] [18:13:18] Starting 'jade'...
-[INFO] [18:13:19] Finished 'jade' after 1.05 s
-[INFO] [18:13:19] Starting 'images'...
-[INFO] [18:13:19] Starting 'copy-images'...
-[INFO] [18:13:19] Finished 'copy-images' after 95 ms
-[INFO] [18:13:19] Starting 'sprites'...
-[INFO] [18:13:21] Finished 'sprites' after 1.29 s
-[INFO] [18:13:21] Finished 'images' after 1.38 s
-[INFO] [18:13:21] Starting 'css'...
-[INFO] [18:13:21] Starting 'css-build'...
-[INFO] [18:13:21] Starting 'sass'...
-[INFO] [18:13:22] Finished 'sass' after 1.62 s
-[INFO] [18:13:22] Starting 'autoprefixer'...
-[INFO] [18:13:24] Finished 'autoprefixer' after 1.35 s
-[INFO] [18:13:24] Starting 'css-concat'...
-[INFO] [18:13:24] Finished 'css-concat' after 28 ms
-[INFO] [18:13:24] Finished 'css-build' after 3 s
-[INFO] [18:13:24] Starting 'css-third-party'...
-[INFO] [18:13:24] Finished 'css-third-party' after 15 ms
-[INFO] [18:13:24] Starting 'css-third-party-resources'...
-[INFO] [18:13:24] Starting 'css-third-party-resources:font-awesome'...
-[INFO] [18:13:24] Finished 'css-third-party-resources:font-awesome' after 33 ms
-[INFO] [18:13:24] Starting 'css-third-party-resources:lato'...
-[INFO] [18:13:24] Finished 'css-third-party-resources:lato' after 347 ms
-[INFO] [18:13:24] Finished 'css-third-party-resources' after 383 ms
-[INFO] [18:13:24] Finished 'css' after 3.41 s
-[INFO] [18:13:24] Starting 'js'...
-[INFO] [18:13:24] Starting 'js-test'...
-[INFO] 23 07 2019 18:13:24.959:INFO [karma-server]: Karma v4.2.0 server started at http://0.0.0.0:9876/
-[INFO] 23 07 2019 18:13:24.961:INFO [launcher]: Launching browsers ChromeHeadless with concurrency unlimited
-[INFO] 23 07 2019 18:13:24.970:INFO [launcher]: Starting browser ChromeHeadless
-[INFO] 23 07 2019 18:13:26.246:INFO [HeadlessChrome 77.0.3844 (Windows 10.0.0)]: Connected on socket LLy36DqPTIXLMg1_AAAA with id 67828416
-[INFO] HeadlessChrome 77.0.3844 (Windows 10.0.0): Executed 4 of 4 SUCCESS (0.123 secs / 0.096 secs)
-[INFO] TOTAL: 4 SUCCESS
-[INFO] [18:13:27] Finished 'js-test' after 2.64 s
-[INFO] [18:13:27] Starting 'js-build'...
-[INFO] [18:13:27] Starting 'lint'...
-[INFO] [18:13:27] Finished 'lint' after 107 ms
-[INFO] [18:13:27] Starting 'copy-js'...
-[INFO] [18:13:27] Finished 'copy-js' after 43 ms
-[INFO] [18:13:27] Starting 'uglify'...
-[INFO] [18:13:27] Finished 'uglify' after 359 ms
-[INFO] [18:13:27] Finished 'js-build' after 515 ms
-[INFO] [18:13:27] Starting 'js-third-party'...
-[INFO] [18:13:27] Finished 'js-third-party' after 23 ms
-[INFO] [18:13:27] Finished 'js' after 3.18 s
-[INFO] [18:13:27] Finished 'build' after 9.13 s
-
-----
-
-== Unit testing
-
-We have two types of tests: backend and frontend. The frontend testing
-is somewhat special because it uses link:http://karma-runner.github.io/0.13/index.html[karma]. It's transparent for
-the devepolers because both tests are triggered by the same `mvn clean install`.
-
-Sometimes we are interested on frontend testing only. We can do it by executing 'mvn frontend:karma'.
-
-----
-tveronezi@ubatuba:tomitribe.io$ mvn frontend:karma
-[INFO] Scanning for projects...
-[INFO]
-[INFO] ------------------------------------------------------------------------
-[INFO] Building Tomitribe :: IO :: Website 0.0.1-SNAPSHOT
-[INFO] ------------------------------------------------------------------------
-[INFO]
-[INFO] --- frontend-maven-plugin:0.0.26:karma (default-cli) @ tomitribe-io-www ---
-[INFO] Running 'karma start karma.conf.js --no-colors' in /home/tveronezi/Documents/development/sources/tribe/ui/tomitribe.io/src/main/static
-[INFO] 23 07 2019 18:10:02.722:WARN [karma]: No captured browser, open http://localhost:9876/
-[INFO] 23 07 2019 18:10:02.797:INFO [karma-server]: Karma v4.2.0 server started at http://0.0.0.0:9876/
-[INFO] 23 07 2019 18:10:02.798:INFO [launcher]: Launching browsers ChromeHeadless with concurrency unlimited
-[INFO] 23 07 2019 18:10:02.820:INFO [launcher]: Starting browser ChromeHeadless
-[INFO] 23 07 2019 18:10:04.336:INFO [HeadlessChrome 77.0.3844 (Linux 0.0.0)]: Connected on socket Y13EEBtxPBzseAcCAAAA with id 17629767
-[INFO] HeadlessChrome 77.0.3844 (Linux 0.0.0): Executed 4 of 4 SUCCESS (0.131 secs / 0.084 secs)
-[INFO] TOTAL: 4 SUCCESS
-
-----
-
-The default browser is ChromeHeadless. In order to debug with the help of a real browser, uncomment this line in
-link:https://github.com/tomitribe/tomitribe.io/blob/master/src/main/static/karma.conf.js[karma.conf.js]
-
-[source:javascript]
-----
-// start these browsers
-// available browser launchers: https://npmjs.org/browse/keyword/karma-launcher
-browsers: [
-    //'Chrome', // uncomment me for local unit testing [not in a headless server]
-    'ChromeHeadless'
-],
-----
-
-When you execute `mvn frontend:karma`, a browser window will popup.
-
-== How to update the application on production?
-
-Please follow the infra documentation: https://github.com/tomitribe/infra/blob/master/tomitribe-io-www/README.adoc
-
-== How to publish a project?
-
-Please follow the configuration documentation: https://github.com/tomitribe/tomitribe.io.config/blob/master/README.adoc
+```
+# build
+cd ./generation/ && npm ci && npm run build && cd ../
+# serve
+npm i -g http-server && http-server -c10 ./webapp/ 
+```
