--- a/README.adoc
+++ b/README.adoc
@@ -7,8 +7,12 @@ It features the most relevant opensource projects and tools developed with the h
 == How to build and run the application locally?
 
 ```
-# build
+# build webapp
 cd ./generation/ && npm ci && npm run build && cd ../
-# serve
+# serve webapp
 npm i -g http-server && http-server -c10 ./webapp/ 
+# build static (needs webapp to be run once)
+cd ./renderer/ && npm ci && npm run start && cd ../
+# serve static
+npm i -g http-server && http-server -c10 ./static/ 
 ```
