--- a/README.adoc
+++ b/README.adoc
@@ -7,12 +7,24 @@ It features the most relevant opensource projects and tools developed with the h
 == How to build and run the application locally?
 
 ```
-# build webapp
-cd ./generation/ && npm ci && npm run build && cd ../
-# serve webapp
-npm i -g http-server && http-server -c10 ./webapp/ 
-# build static (needs webapp to be run once)
-cd ./renderer/ && npm ci && npm run start && cd ../
-# serve static
-npm i -g http-server && http-server -c10 ./static/ 
+# Building steps:
+# webapp generation
+npm run build:webapp
+# static renderer (needs build:webapp run once)
+npm run build:static
+
+# Serve(optional):
+# webapp serve (needs build:webapp run once)
+npm run serve:webapp
+# static serve (needs build:static run once)
+npm run serve:static
 ```
+
+== What this project does
+
+There are 4 parts of this project:
+
+- generation/ runs spa generation (gulp) and puts it into webapp folder
+- webapp/ can be served to check spa/js variant of site
+- renderer/ starts http-server for webapp, crawls all links it can find related to same domain and saves pages into static folder
+- static/ can be served to check fully static variant of site
